Bug fix and add application.devMode application properties